--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "cossou/jasperphp": "^2.8",
-        "geekcom/phpjasper": "^3.4",
+        "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
